Updated All home login register page