@@ -1,50 +1,66 @@
 package base;
 
-import org.openqa.selenium.WebDriver;
-
-import org.openqa.selenium.OutputType;
-import org.openqa.selenium.TakesScreenshot;
+import org.openqa.selenium.*;
 import org.testng.ITestResult;
 import org.testng.annotations.*;
 
 import driver.DriverFactory;
 import utilities.ConfigReader;
+import utilities.ExtentReportManager;
+import com.aventstack.extentreports.ExtentReports;
+import com.aventstack.extentreports.ExtentTest;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.*;
 
+@Listeners({io.qameta.allure.testng.AllureTestNg.class})
 public class BaseTest {
 
     protected WebDriver driver;
-    
+    protected static ExtentReports extent;
+    protected ExtentTest test;
+
+    @Parameters("browser")
+    @BeforeSuite
+    public void setupExtentReports() {
+        extent = ExtentReportManager.getExtentReports();
+    }
+
     @Parameters("browser")
     @BeforeMethod
     public void setup(@Optional("chrome") String browser) {
-        DriverFactory.setBrowser(browser);
-        driver = DriverFactory.getDriver();
-        driver.get(ConfigReader.getProperty("baseUrl"));
+        driver = DriverFactory.initDriver(browser);
+
+        String url = ConfigReader.getProperty("baseUrl");
+        if (url == null || url.isEmpty()) {
+            throw new RuntimeException("baseUrl not found in config.properties");
+        }
+        driver.get(url);
     }
 
     @AfterMethod
     public void tearDown(ITestResult result) {
-
-      
-        if (ITestResult.FAILURE == result.getStatus()) {
+        if (ITestResult.FAILURE == result.getStatus() && driver != null) {
             takeScreenshot(result.getName());
         }
 
-        DriverFactory.cleanupDriver();
+        DriverFactory.quitDriver();
+    }
+
+    @AfterSuite
+    public void tearDownExtentReports() {
+        if (extent != null) {
+            extent.flush();
+        }
     }
 
     private void takeScreenshot(String testName) {
         try {
-            TakesScreenshot ts = (TakesScreenshot) DriverFactory.getDriver();
+            TakesScreenshot ts = (TakesScreenshot) driver;
             File source = ts.getScreenshotAs(OutputType.FILE);
 
-            Path destination = Path.of(
+            Path destination = Paths.get(
                     System.getProperty("user.dir"),
                     "screenshots",
                     testName + ".png"
@@ -54,7 +70,7 @@ public class BaseTest {
             Files.copy(source.toPath(), destination, StandardCopyOption.REPLACE_EXISTING);
 
         } catch (IOException e) {
-            System.err.println("Failed to capture screenshot: " + e.getMessage());
+            System.err.println("Screenshot failed: " + e.getMessage());
         }
     }
 }
